# poshmon

./: .dockerignore  .gitignore  LICENSE  README.md
client/: PoshdexModule.psm1  PoshmonGraphicsModule.psm1  Show-Battle.ps1  Show-JoinMenu.ps1  Show-MainMenu.ps1  Show-Pokedex.ps1  Start-Poshmon.ps1  Test-Pokedex.ps1  WebCommunicationsModule.psm1  pokedex_test.ps1  websocket.ps1
client/PoshmonGraphicsModule/: PoshmonGraphicsModule.psd1  PoshmonGraphicsModule.psm1
data/: effectdex.json  engine.json  font.json  gamenames.txt  models.json  movedex.json  moves.json  pokedex.json  sprite_atlas.json  trainerdex.json
nc-client/: Cargo.toml
nc-client/src/: main.rs
nc-client/src/graphics/: canvas.rs  colors.rs  mod.rs  screen.rs  sprite.rs  viewport.rs
nc-client/src/graphics/gameboy/: mod.rs  viewport.rs
posh-client/: PoshdexModule.psm1  Show-JoinMenu.ps1  Show-Pokedex.ps1  Show-TrainerInfo.ps1  Start-Poshmon.ps1
poshmon-lib/: Cargo.toml
poshmon-lib/src/: datagram.rs  key.rs  lib.rs  main.rs  packet.rs
poshmon-lib/src/engine/: mod.rs
poshmon-lib/src/engine/gen1/: game.rs  graphics.rs  mod.rs  pokemon.rs  pokemove.rs  poketype.rs  trainer.rs
poshmon-lib/src/engine/generics/: mod.rs  sprite.rs
poshmon-lib/src/networking/: datagram.rs  key.rs  mod.rs  packet.rs
poshmon-management/: Cargo.toml  Dockerfile  diesel.toml
poshmon-management/migrations/2023-02-21-225720_create_user/: up.sql
poshmon-management/migrations/2023-02-24-010850_create_gen1_tables/: down.sql  up.sql
poshmon-management/src/: auth.rs  httpconst.rs  main.rs
poshmon-management/src/dbc/: mod.rs  models.rs  schema.rs
poshmon-server/: Cargo.toml  Dockerfile
poshmon-server/src/: main.rs
poshmon-server/src/comm/: auth.rs  crypto.rs  keys.rs  mod.rs  queries.rs  structs.rs
poshmon-server/src/engine/: data.rs  mod.rs  structs.rs
poshmon-tools/: font_maker.py  model_builder.py  move.py  move_builder.py  pokedata.py  pokedex_builder.py  pokemon_entity.py  pyproject.toml  pyproject.toml.bk  tileset.py  tileset_builder.py  view_trainer.py
poshmon-tools/src/poshmon_tools/: devserver.py  font.py  move.py  move_builder.py  tileset_builder.py
server/: Cargo.toml  modelparser.nim
server/src/: main.rs
server/src/comm/: auth.rs  crypto.rs  keys.rs  mod.rs  queries.rs  structs.rs
server/src/engine/: data.rs  mod.rs  structs.rs
