[package]
name = "poshmon_nclient"
version = "0.1.0"
edition = "2024"

[dependencies]
term_size = "0.3.2"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
base64 = "0.13.0"
crossterm = "0.28.1"

[dependencies.poshmon-lib]
path = "../poshmon-lib"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Deserialize UUID
]