[package]
name = "poshmon_nclient"
version = "0.1.0"
edition = "2024"

[dependencies]
term_size = "0.3.2"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
crossterm = "0.29.0"

[dependencies.poshmon-lib]
path = "../poshmon-lib"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Deserialize UUID
]
