[package]
name = "poshmon-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.5"
hex = "0.4.3"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12.1"
crypto-common = { version = "0.1.6", features = ["rand_core"] }
base64 = "0.13.0"
rand = "0.8.4"
tokio-tungstenite = { version = "*", features = ["connect", "native-tls"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Deserialize UUID
]

[dependencies.tungstenite]
version = "*"
default-features = false