[package]
name = "poshmon-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.7"
hex = "0.4.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12.1"
crypto-common = { version = "0.1.6", features = ["rand_core", "getrandom"] }
base64 = "0.22.1"
rand = "0.9.0"
tokio-tungstenite = { version = "*", features = ["connect", "native-tls"] }
term_size = "0.3.2"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Deserialize UUID
]

[dependencies.tungstenite]
version = "*"
default-features = false
