[package]
name = "poshmon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["connect", "native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
local_ipaddress = "0.1.3"
futures-channel = "0.3"
url = "2.0.0"
env_logger = "0.7"
sha2 = "0.10"
hmac = "0.12.1"
crypto-common = { version = "0.1.6", features = ["rand_core"] }
base64 = "0.13.0"
rust-argon2 = "1.0"
sqlite = "0.30.3"
digest = "0.10.5"
hex = "0.4.3"
log = "0.4.17"
dotenv = "0.15.0"

[dependencies.poshmon-lib]
path = "../poshmon-lib"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tungstenite]
version = "*"
default-features = false
