[tool.poetry]
name = "poshmon-tools"
version = "0.1.0"
description = ""
authors = ["super-phreak <joshpelino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bitstring = "^3.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
