[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meval = "0.2"
serde_json = "1.0"
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }