[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meval = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["connect", "native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
local_ipaddress = "0.1.3"
futures-channel = "0.3"
url = "2.0.0"
env_logger = "0.7"


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tungstenite]
version = "*"
default-features = false